--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@angular/animations": "~13.0.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
+    "@angular/core": "^13.0.2",
     "@angular/forms": "~13.0.0",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
